--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									<ul class="actions special">
 										<li><a target="_blank" href="https://github.com/PattoOehler/FaucetHelper" class="button">Code</a></li>
 									</ul>
-									<img class="image fit" src="images/Faucet1.png" alt="" /></a>
+									<img class="image fit" src="images/Faucet1.PNG" alt="" /></a>
 									<p>
 									<ul>
 										<li>Created using Java</li>
