--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Portfolio</a></li>
-							<li><a href="Resume.pdf">Resume</a></li>
+							<li><a target="_blank" href="Resume.pdf">Resume</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
