--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<ul class="actions special">
 										<li><a target="_blank" href="https://github.com/PattoOehler/PattOS" class="button">Code</a></li>
 								</ul>
-								<img src="images/PattOS2.png" alt="" />
+								<img class="image fit" src="images/PattOS2.png" alt="" />
 								<p>
 									<ul>
 										<li> Created my own file system</li>
