--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+	
 <html>
 	<head>
 		<title>Portfolio</title>
@@ -20,7 +16,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Patton Oehler</h1>
-						<p>I am a self-taught developer with a passion for technology</br>
+						<p>I am a self-taught developer with a passion for technology<br />
 						<a href="mailto:pattooehler@gmail.com">Contact me</a> and we can create something amazing</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
