--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE HTML>
-	
+<!--
+	Massively by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
 		<title>Portfolio</title>
@@ -16,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Patton Oehler</h1>
-						<p>I am a self-taught developer with a passion for technology<br />
+						<p>I am a self-taught developer with a passion for technology</br>
 						<a href="mailto:pattooehler@gmail.com">Contact me</a> and we can create something amazing</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -32,10 +36,10 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Portfolio</a></li>
-							<li><a target="_blank" href="Resume.pdf">Resume</a></li>
+							<li><a href="Resume.pdf">Resume</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/patton-oehler/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a target="_blank" href="https://github.com/PattoOehler" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -52,7 +56,7 @@
 								<ul class="actions special">
 										<li><a target="_blank" href="https://github.com/PattoOehler/PattOS" class="button">Code</a></li>
 								</ul>
-								<img class="image fit" src="images/PattOS2.png" alt="" />
+								<img src="images/PattOS2.png" alt="" />
 								<p>
 									<ul>
 										<li> Created my own file system</li>
@@ -76,7 +80,7 @@
 									<ul class="actions special">
 										<li><a target="_blank" href="https://github.com/PattoOehler/FaucetHelper" class="button">Code</a></li>
 									</ul>
-									<img class="image fit" src="images/Faucet1.PNG" alt="Cannot be displayed" /></a>
+									<img class="image fit" src="images/Faucet1.png" alt="" /></a>
 									<p>
 									<ul>
 										<li>Created using Java</li>
@@ -126,7 +130,7 @@
 							<section>
 								<h3>Social&nbsp;&nbsp;</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/patton-oehler/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a target="_blank" href="https://github.com/PattoOehler" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 								<h3>&nbsp;&nbsp;&nbsp;&nbsp;Email&nbsp;&nbsp;</h3>
