--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<li><a href="Resume.pdf">Resume</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/patton-oehler/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a target="_blank" href="https://www.linkedin.com/in/patton-oehler/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a target="_blank" href="https://github.com/PattoOehler" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -130,7 +130,7 @@
 							<section>
 								<h3>Social&nbsp;&nbsp;</h3>
 								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/patton-oehler/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a target="_blank" href="https://www.linkedin.com/in/patton-oehler/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a target="_blank" href="https://github.com/PattoOehler" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 								<h3>&nbsp;&nbsp;&nbsp;&nbsp;Email&nbsp;&nbsp;</h3>
