--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Patton Oehler</h1>
-						<p>I am a self-taught developer with a passion for technology</br>
+						<p>I am a software developer with a passion for technology</br>
 						<a href="mailto:pattooehler@gmail.com">Contact me</a> and we can create something amazing</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
