--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+		ul {
+    		list-style-position: inside;
+		}
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -21,7 +26,7 @@
 					<div id="intro">
 						<h1>Patton Oehler</h1>
 						<p>I am a software developer with a passion for technology</br>
-						<a href="mailto:pattooehler@gmail.com">Contact me</a> and we can create something amazing</p>
+						<a href="mailto:pattooehler@gmail.com">Contact me</a> to create something amazing</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -35,8 +40,11 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Portfolio</a></li>
+							<li class="active"><a href="#">Portfolio</a></li>
 							<li><a href="Resume.pdf">Resume</a></li>
+							<li><a href="paft.html">PAFT</a></li>
+							<li><a href="pattos.html">PattOS</a></li>
+							<li><a href="adwars.html">Ad Wars</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a target="_blank" href="https://www.linkedin.com/in/patton-oehler/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -50,19 +58,21 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2 style="text-transform: capitalize">PattOS</h2>
-									<p>This is my own operating system made completely from scratch in C++(and some assembly)</p>
+									<h2 style="text-transform: capitalize">PAFT</h2>
+									<h3> Peer to Peer Anonymous File Transfer </h3>
 								</header>
 								<ul class="actions special">
-										<li><a target="_blank" href="https://github.com/PattoOehler/PattOS" class="button">Code</a></li>
+									<li><a href="paft.html" class="button">Overview</a></li>
+									<li><a target="_blank" href="https://github.com/PattoOehler/PAFT" class="button">Code</a></li>
 								</ul>
-								<img src="images/PattOS2.png" alt="" />
+								<img src="images/paftmain.png" alt="" height="35%" width="75%"/>
 								<p>
 									<ul>
-										<li> Created my own file system</li>
-										<li> Implemented device drivers for the keyboard, mouse, hard drive, and monitor</li>
-										<li> Used a Makefile to quickly compile and run the code </li>
-										<li> Made my own command line to be able to communicate with the code at runtime</li>
+										<li> Finds peers and uses them as proxies for anonymity using <a href="https://en.wikipedia.org/wiki/Onion_routing">onion routing</a> </li>
+										<li> Seperates the files into chunks to allow for partial/concurrent downloading </li>
+										<li> Uses SHA-256 checksums to validate the integrity of chunks</li>
+										<li> Made with C/C++ Socket Programming </li>
+										<li> Logaritmic searches of peers by using a Distributed Hash Table </li>
 
 									</ul>
 
@@ -75,17 +85,20 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2>FaucetHelper</h2>
+										<h2>PattOS</h2>
 									</header>
 									<ul class="actions special">
-										<li><a target="_blank" href="https://github.com/PattoOehler/FaucetHelper" class="button">Code</a></li>
+										<li><a href="pattos.html" class="button">Overview</a></li>
+										<li><a target="_blank" href="https://github.com/PattoOehler/PattOS" class="button">Code</a></li>
 									</ul>
-									<img class="image fit" src="images/Faucet1.PNG" alt="" /></a>
+									<p> This is my own operating system made completely from scratch in C++(and some assembly) </p>
+									<img class="image fit" src="images/PattOS2.png" alt="" height="35%" width="75%"/></a>
 									<p>
 									<ul>
-										<li>Created using Java</li>
-										<li>Implemented a sorting algorthim optimized for the data given</li>
-										<li>Parsed files to ease expansion of given websites and run-time options </li>
+										<li> Created my own file system</li>
+										<li> Implemented device drivers for the keyboard, mouse, hard drive, and monitor</li>
+										<li> Used a Makefile to quickly compile and run the code </li>
+										<li> Made my own command line to be able to communicate with the code at runtime</li>
 
 									</ul>
 
@@ -95,20 +108,20 @@
 								</article>
 								<article>
 									<header>
-
-										<h2>Polymorphic<br />
-										Encryption Engine</h2>
+										<h2> AD Wars </h2>
 									</header>
 									<ul class="actions special">
-										<li><a target="_blank" href="https://github.com/PattoOehler/PolyMorphicEncryptionEnginePOC" class="button">Code</a></li>
+										<li><a href="adwars.html" class="button">Overview</a></li>
+										<li><a target="_blank" href="https://github.com/PattoOehler/CyberTheoryProject" class="button">Code</a></li>
 									</ul>
-									<img class="image fit" src="images/Poly1.png" alt="" />
+									<p> This is a top-down shooter made in godot as a group project over the course of 3 days </p>
+									<img class="image fit" src="images/godotmain.png" alt="" height="35%" width="75%"/>
 									<p>
 									<ul>
-										<li> Made using Assembly and C </li>
-										<li> Decrypts code to ram and executes at runtime</li>
-										<li> Has 255 possible encryption/decryption keys</li>
-										<li> Glorified Hello World! </li>
+										<li> Made using Godot's programming language GDScript </li>
+										<li> Has three different levels </li>
+										<li> Includes two bosses and three basic enemies</li>
+										<li> Won Students Choice Award at Indian Hill's Byte Jam </li>
 
 									</ul>
 
