--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 								<p>
 									<ul>
 										<li> Finds peers and uses them as proxies for anonymity using <a href="https://en.wikipedia.org/wiki/Onion_routing">onion routing</a> </li>
-										<li> Seperates the files into chunks to allow for partial/concurrent downloading </li>
+										<li> Separates the files into chunks to allow for partial/concurrent downloading </li>
 										<li> Uses SHA-256 checksums to validate the integrity of chunks</li>
 										<li> Made with C/C++ Socket Programming </li>
-										<li> Logaritmic searches of peers by using a Distributed Hash Table </li>
+										<li> Logarithmic searches of peers by using a Distributed Hash Table </li>
 
 									</ul>
 
