--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										<li> Finds peers and uses them as proxies for anonymity using <a href="https://en.wikipedia.org/wiki/Onion_routing">onion routing</a> </li>
 										<li> Separates the files into chunks to allow for partial/concurrent downloading </li>
 										<li> Uses SHA-256 checksums to validate the integrity of chunks</li>
-										<li> Made with C/C++ Socket Programming </li>
+										<li> Made with C/C++ socket programming and multithreading </li>
 										<li> Logarithmic searches of peers by using a Distributed Hash Table </li>
 
 									</ul>
