--- a/pattos.html
+++ b/pattos.html
@@ -61,7 +61,7 @@
 									Your browser does not support the video tag.
 								</video>
 								<p>
-									&emsp;This OS was made to better understand the internal workings of an operating system. It has its own command line as well as its own filesystem.  All attached components needed a device driver to work including the Hard Drives, Mouse, Keyboard, and Monitor(all built from scratch).  The background has movement on the timer intterupt as shown in the video above.
+									&emsp;This OS was made to better understand the internal workings of an operating system. It has its own command line as well as its own filesystem.  All attached components needed a device driver to work including the Hard Drives, Mouse, Keyboard, and Monitor(all built from scratch).  The background has movement on the timer interrupt as shown in the video above.
 
 
 
