--- a/adwars.html
+++ b/adwars.html
@@ -71,9 +71,9 @@
 									<ul>
 										<li> Layout of the second map </li>
 										<li> Functioning menu and paths between scenes  </li>
-										<li> Testing and balancing of eneimies </li>
+										<li> Testing and balancing of enemies </li>
 										<li> Demoing the gameplay </li>
-										<li> Assisted with the eneimies pathing </li>
+										<li> Assisted with the enemies pathing </li>
 									</ul>
 								</p>
 							</article>
