--- a/adwars.html
+++ b/adwars.html
@@ -35,7 +35,6 @@
 						<ul class="links">
 							<li><a href="index.html">Portfolio</a></li>
 							<li><a href="Resume.pdf">Resume</a></li>
-							<li><a href="paft.html">PAFT</a></li>
 							<li><a href="pattos.html">PattOS</a></li>
 							<li class="active"><a href="#">Ad Wars</a></li>
 						</ul>
@@ -63,11 +62,11 @@
 									Your browser does not support the video tag.
 								</video>
 								<p>
-									&emsp;This award winning game was made as a group project for Indian Hills Byte Jam over the course of 3 days. It includes three different levels and two bosses.  
+									&emsp;This award winning game was made as a group project for Indian Hills Byte Jam. It includes three different levels and two custom bosses.  
 
 								</p>
 								<p>	
-									<center>Things I was personally responsible for</center>
+									<center>I was personally responsible for</center>
 									<ul>
 										<li> Layout of the second map </li>
 										<li> Functioning menu and paths between scenes  </li>
