--- a/pattos.html
+++ b/pattos.html
@@ -34,7 +34,6 @@
 						<ul class="links">
 							<li><a href="index.html">Portfolio</a></li>
 							<li><a href="Resume.pdf">Resume</a></li>
-							<li><a href="paft.html">PAFT</a></li>
 							<li class="active"><a href="#">PattOS</a></li>
 							<li><a href="adwars.html">Ad Wars</a></li>
 						</ul>
@@ -61,7 +60,7 @@
 									Your browser does not support the video tag.
 								</video>
 								<p>
-									&emsp;This OS was made to better understand the internal workings of an operating system. It has its own command line as well as its own filesystem.  All attached components needed a device driver to work including the Hard Drives, Mouse, Keyboard, and Monitor(all built from scratch).  The background has movement on the timer interrupt as shown in the video above.
+									&emsp;This OS was created to better understand the internal workings of an operating system. It has its own command line as well as its own filesystem.  All attached components needed a device driver to work including Hard Drives, Mouse, Keyboard, and Monitor(all built from scratch).  The background has movement on the timer interrupt as shown in the video above.
 
 
 
